Dev to Main release (#178)
Co-authored-by: anaibol <hey@anib.al>
Co-authored-by: Juan M. Obrach <juanobrach@gmail.com>
Co-authored-by: swalter75 <walter.alejandro.sosa@gmail.com>
Co-authored-by: issamel <issam@explaynable.com>
Co-authored-by: Anibal <juananibal.micheli@gmail.com>
Co-authored-by: issamel <87072979+explaynable@users.noreply.github.com>
Co-authored-by: Arnaud <arnaud.bezancon@advantys.com>

--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -3,5 +3,5 @@
   "POST_REACTION_BODY": "{firstName} sends you {postReaction}",
   "FRIENDSHIP_REQUEST_BODY": "{firstName} sent you a friend request",
   "FRIENDSHIP_ACCEPTED_BODY": "{firstName} accepted your friend request",
-  "NEW_LIVE_TAG_BODY": "Come and discover the new # of the day 👀⚡️"
+  "NEW_LIVE_TAG_BODY": "Yelly trend live"
 }
