--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -3,5 +3,8 @@
   "POST_REACTION_BODY": "{firstName} te envía {postReaction}",
   "FRIENDSHIP_REQUEST_BODY": "{firstName} te envió una solicitud de amistad",
   "FRIENDSHIP_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
-  "NEW_LIVE_TAG_BODY": "Tendencia Yelly live"
+  "NEW_LIVE_TAG_BODY": "Tendencia Yelly live",
+  "POST_REPLIED": "{firstName} respondió a tu post 💬",
+  "SAME_POST_REPLIED": "{firstName} respondió al post de {parentPostAuthorFirstName} 💬",
+  "YOUR_POST_WILL_VANISH": "Tu post desaparecerá en 5 minutos ⚡ Postea de nuevo para decir lo que haces ! 💬"
 }
