--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -4,6 +4,7 @@
   "FRIENDSHIP_REQUEST_BODY": "{firstName} te envió una solicitud de amistad",
   "FRIENDSHIP_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
   "NEW_LIVE_TAG_BODY": "Tendencia Yelly live",
+  "FRIEND_POSTED": "{firstName} publicó un nuevo post 💬",
   "POST_REPLIED": "{firstName} respondió a tu post 💬",
   "SAME_POST_REPLIED": "{firstName} respondió al post de {parentPostAuthorFirstName} 💬",
   "YOUR_POST_WILL_VANISH": "Tu post desaparecerá en 5 minutos ⚡ Postea de nuevo para decir lo que haces ! 💬"
