--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -6,6 +6,6 @@
   "NEW_LIVE_TAG_BODY": "Yelly trend live",
   "FRIEND_POSTED": "{firstName} published a new post 💬",
   "POST_REPLIED": "{firstName} replied your post 💬",
-  "SAME_POST_REPLIED": "{firstName} replied to {parentPostAuthorFirstName} 💬",
+  "SAME_POST_REPLIED": "{firstName} replied to the same post as you 💬",
   "YOUR_POST_WILL_VANISH": "Your post will vanish in 5 minutes ⚡ Come and share what you're doing 💬"
 }
