--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -5,7 +5,7 @@
   "FRIENDSHIP_ACCEPTED_BODY": "{firstName} accepted your friend request",
   "NEW_LIVE_TAG_BODY": "Yelly trend live",
   "FRIEND_POSTED": "{firstName} published a new post 💬",
-  "FRIEND_POSTED_EPHEMERAL": "{firstName} published a new post that will vanish in 15 minutes ⚡",
+  "FRIEND_POSTED_EPHEMERAL": "{firstName} published a new ephemeral post ⚡",
   "POST_REPLIED": "{firstName} replied your post 💬",
   "SAME_POST_REPLIED": "{firstName} replied to the same post as you 💬",
   "YOUR_POST_WILL_VANISH": "Your post will vanish in 5 minutes ⚡ Come and share what you're doing 💬"
