--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -1,11 +1,11 @@
 {
   "POST_REACTION_TITLE": "Tienes una nueva reacción",
   "POST_REACTION_BODY": "{firstName} te envía {postReaction}",
-  "FRIENDSHIP_REQUEST_BODY": "{firstName} te envió una solicitud de amistad",
-  "FRIENDSHIP_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
+  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} te envió una solicitud de amistad",
+  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
   "NEW_LIVE_TAG_BODY": "Tendencia Yelly live",
-  "FRIEND_POSTED": "{firstName} publicó un nuevo post 💬",
-  "FRIEND_POSTED_EPHEMERAL": "{firstName} publicó un nuevo post efímero ⚡",
+  "FOLLOWEE_POSTED": "{firstName} publicó un nuevo post 💬",
+  "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} publicó un nuevo post efímero ⚡",
   "POST_REPLIED": "{firstName} respondió a tu post 💬",
   "SAME_POST_REPLIED": "{firstName} respondió al mismo post que tú 💬",
   "YOUR_POST_WILL_VANISH": "Tu post desaparecerá en 5 minutos ⚡ Postea de nuevo para decir lo que haces ! 💬"
