--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -1,11 +1,11 @@
 {
   "POST_REACTION_TITLE": "You have a new reaction",
   "POST_REACTION_BODY": "{firstName} sends you {postReaction}",
-  "FRIENDSHIP_REQUEST_BODY": "{firstName} sent you a friend request",
-  "FRIENDSHIP_ACCEPTED_BODY": "{firstName} accepted your friend request",
+  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} sent you a friend request",
+  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} accepted your friend request",
   "NEW_LIVE_TAG_BODY": "Yelly trend live",
-  "FRIEND_POSTED": "{firstName} published a new post 💬",
-  "FRIEND_POSTED_EPHEMERAL": "{firstName} published a new ephemeral post ⚡",
+  "FOLLOWEE_POSTED": "{firstName} published a new post 💬",
+  "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} published a new ephemeral post ⚡",
   "POST_REPLIED": "{firstName} replied your post 💬",
   "SAME_POST_REPLIED": "{firstName} replied to the same post as you 💬",
   "YOUR_POST_WILL_VANISH": "Your post will vanish in 5 minutes ⚡ Come and share what you're doing 💬"
