--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -1,8 +1,8 @@
 {
   "POST_REACTION_TITLE": "{firstName} a uppé ton yelly !",
   "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
-  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} a demandé à suivre tes yelly",
-  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} a accepté ta demande de suivre ses yelly",
+  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} a demandé à suivre tes yellys",
+  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} a accepté ta demande de suivre ses yellys",
   "NEW_LIVE_TAG_BODY": "Tendance Yelly live",
   "FOLLOWEE_POSTED": "{firstName} a publié un nouveau yelly 💬",
   "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} a publié un nouveau yelly éphémère ⚡",
