--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -1,6 +1,6 @@
 {
-  "POST_REACTION_TITLE": "{firstName} a uppé ton yelly !",
-  "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
+  "POST_REACTION_TITLE": "{firstName} a aimé ton yelly !",
+  "POST_REACTION_BODY": "{firstName} a aimé ton yelly !",
   "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} a demandé à suivre tes yellys",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} a accepté ta demande de suivre ses yellys",
   "NEW_LIVE_TAG_BODY": "Tendance Yelly live",
