--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -3,7 +3,7 @@
   "POST_REACTION_BODY": "{firstName} liked your yelly!",
   "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} requested to follow your yellys",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} accepted your request to follow his/her yellys",
-  "NEW_LIVE_TAG_BODY": "Yelly trend live",
+  "PROMOTED_TAG_BODY": "Yelly trend live",
   "FOLLOWEE_POSTED": "{firstName} published a new yelly 💬",
   "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} published a new ephemeral yelly ⚡",
   "POST_REPLIED": "{firstName} replied your yelly 💬",
