--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -3,7 +3,7 @@
   "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
   "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} te envió una solicitud de amistad",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
-  "NEW_LIVE_TAG_BODY": "Tendencia Yelly live",
+  "PROMOTED_TAG_BODY": "Tendencia Yelly live",
   "FOLLOWEE_POSTED": "{firstName} publicó un nuevo yelly 💬",
   "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} publicó un nuevo yelly efímero ⚡",
   "POST_REPLIED": "{firstName} respondió a tu yelly 💬",
