--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -3,7 +3,7 @@
   "POST_REACTION_BODY": "{firstName} a aimé ton yelly !",
   "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} a demandé à suivre tes yellys",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} a accepté ta demande de suivre ses yellys",
-  "NEW_LIVE_TAG_BODY": "Tendance Yelly live",
+  "PROMOTED_TAG_BODY": "Tendance Yelly live",
   "FOLLOWEE_POSTED": "{firstName} a publié un nouveau yelly 💬",
   "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} a publié un nouveau yelly éphémère ⚡",
   "POST_REPLIED": "{firstName} a répondu à ton yelly 💬",
