--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -1,13 +1,8 @@
 {
-  "POST_REACTION_TITLE": "{firstName} a aimé ton yelly !",
-  "POST_REACTION_BODY": "{firstName} a aimé ton yelly !",
-  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} a demandé à suivre tes yellys",
-  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} a accepté ta demande de suivre ses yellys",
+  "POST_REACTION_BODY": "{firstName} a aimé ton post !",
+  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} te suit désormais",
   "PROMOTED_TAG_BODY": "Tendance Yelly live",
-  "FOLLOWEE_POSTED": "{firstName} a publié un nouveau yelly 💬",
-  "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} a publié un nouveau yelly éphémère ⚡",
-  "POST_REPLIED": "{firstName} a répondu à ton yelly 💬",
-  "SAME_POST_REPLIED": "{firstName} a répondu au même yelly que toi 💬",
-  "SAME_SCHOOL_POSTED": "Quelqu'un de ton école a posté un yelly 💬",
-  "YOUR_POST_WILL_VANISH": "Ton yelly disparaît dans 5 minutes ⚡ Post à nouveau pour dire ce que tu fais ! 💬"
+  "POST_REPLIED": "{firstName} a répondu à ton post 💬",
+  "SAME_POST_REPLIED": "{firstName} a répondu au même post que toi 💬",
+  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬"
 }
