--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -1,13 +1,8 @@
 {
-  "POST_REACTION_TITLE": "{firstName} a uppé ton yelly !",
   "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
-  "FOLLOW_REQUEST_PUSH_NOTIFICATION_BODY": "{firstName} te envió una solicitud de amistad",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
   "PROMOTED_TAG_BODY": "Tendencia Yelly live",
-  "FOLLOWEE_POSTED": "{firstName} publicó un nuevo yelly 💬",
-  "FOLLOWEE_POSTED_EPHEMERAL": "{firstName} publicó un nuevo yelly efímero ⚡",
   "POST_REPLIED": "{firstName} respondió a tu yelly 💬",
   "SAME_POST_REPLIED": "{firstName} respondió al mismo yelly que tú 💬",
-  "SAME_SCHOOL_POSTED": "Alguien de tu escuela publicó un yelly 💬",
-  "YOUR_POST_WILL_VANISH": "Tu yelly desaparecerá en 5 minutos ⚡ Postea de nuevo para decir lo que haces ! 💬"
+  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬"
 }
