--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -1,8 +1,10 @@
 {
   "POST_REACTION_BODY": "{firstName} liked your post!",
+  "TAG_REACTION_BODY": "{firstName} liked your post!",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} accepted your request to follow his/her yellys",
   "PROMOTED_TAG_BODY": "Yelly trend live",
   "POST_REPLIED": "{firstName} replied your yelly 💬",
   "SAME_POST_REPLIED": "{firstName} replied to the same yelly as you 💬",
-  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬"
+  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬",
+  "FOLLOWEE_CREATED_TAG": "{firstName} a publié un nouveau yelly 💬"
 }
