--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -1,8 +1,10 @@
 {
   "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
+  "TAG_REACTION_BODY": "{firstName} a uppé ton yelly !",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
   "PROMOTED_TAG_BODY": "Tendencia Yelly live",
   "POST_REPLIED": "{firstName} respondió a tu yelly 💬",
   "SAME_POST_REPLIED": "{firstName} respondió al mismo yelly que tú 💬",
-  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬"
+  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬",
+  "FOLLOWEE_CREATED_TAG": "{firstName} a publié un nouveau yelly 💬"
 }
