--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -1,6 +1,6 @@
 {
   "POST_REACTION_BODY": "{firstName} liked your post!",
-  "TAG_REACTION_BODY": "{firstName} liked your post!",
+  "TAG_REACTION_BODY": "{firstName} liked your tag!",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} accepted your request to follow his/her yellys",
   "PROMOTED_TAG_BODY": "Yelly trend live",
   "POST_REPLIED": "{firstName} replied your yelly 💬",
