--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -1,6 +1,6 @@
 {
   "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
-  "TAG_REACTION_BODY": "{firstName} a uppé ton yelly !",
+  "TAG_REACTION_BODY": "{firstName} a uppé ton tag !",
   "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
   "PROMOTED_TAG_BODY": "Tendencia Yelly live",
   "POST_REPLIED": "{firstName} respondió a tu yelly 💬",
