--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -1,10 +1,11 @@
 {
-  "POST_REACTION_BODY": "{firstName} a uppé ton yelly !",
-  "TAG_REACTION_BODY": "{firstName} a uppé ton tag !",
-  "FOLLOW_REQUEST_ACCEPTED_BODY": "{firstName} aceptó tu solicitud de amistad",
-  "PROMOTED_TAG_BODY": "Tendencia Yelly live",
-  "POST_REPLIED": "{firstName} respondió a tu yelly 💬",
-  "SAME_POST_REPLIED": "{firstName} respondió al mismo yelly que tú 💬",
-  "POSTED_ON_YOUR_TAG": "{firstName} a publié un nouveau yelly 💬",
-  "FOLLOWEE_CREATED_TAG": "{firstName} a publié un nouveau yelly 💬"
+  "reactedToYourTag": "{otherUserFirstName} a voté pour ton sujet du jour !",
+  "reactedToYourPost": "{otherUserFirstName} a aimé ton post sur sur #{tagText}",
+  "repliedToYourPost": "{otherUserFirstName} a répondu a ton post sur #{tagText}",
+  "repliedToSamePostAsYou": "{otherUserFirstName} a répondu au même post que toi sur #{tagText}",
+  "thereAreNewPostsOnYourTag": "{newPostCount} nouveaux posts sur ton sujet du jour !",
+  "yourTagIsTrending": "Ton sujet du jour est en Une !",
+  "isNowFollowingYou": "{otherUserFirstName} te suis désormais",
+  "promotedTag": "Tendance Yelly live",
+  "followeeCreatedTag": "{firstName} a publié un nouveau yelly 💬"
 }
