feat: someone reacted to your tag

--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -1,5 +1,6 @@
 {
   "reactedToYourTag": "{otherUserFirstName} a voté pour ton sujet du jour !",
+  "someoneReactedToYourTag": "Quelqu'un a voté pour ton sujet du jour !",
   "reactedToYourPost": "{otherUserFirstName} a aimé ton post sur sur #{tagText}",
   "reactedToYourPostNoTag": "{otherUserFirstName} a aimé ton post",
   "repliedToYourPost": "{otherUserFirstName} a répondu à ton post sur #{tagText}",
