--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -13,5 +13,6 @@
   "promotedTag": "Tendance Yelly live",
   "followeeCreatedTag": "{otherUserFirstName} created the topic #{tagText}",
   "youHaveBeenMentioned": "{otherUserFirstName} a mentionné ton nom sur #{tagText}",
-  "youHaveBeenMentionedNoTag": "{otherUserFirstName} a mentionné ton nom"
+  "youHaveBeenMentionedNoTag": "{otherUserFirstName} a mentionné ton nom",
+  "newAudience":  "Congratulations for your topic! You added {newPeopleCount} people to your audience"
 }
