feat: audience check (#270)
* feat: schema: user: followersCheckedAt

* Revert "feat: schema: user: followersCheckedAt"

This reverts commit 369e0b354a92e4d24bcb862a3b4d9c1021337da4.

* feat: schema: user followersCheckCount followersCheckedAt

* feat: checkFollowersGrowth mutation

* feat: followers growth push notif

* chore: push notif wording

* chore: fix: json

--- a/src/i18n/es/notifications.json
+++ b/src/i18n/es/notifications.json
@@ -14,6 +14,6 @@
   "followeeCreatedTag": "{otherUserFirstName} created the topic #{tagText}",
   "youHaveBeenMentioned": "{otherUserFirstName} a mentionné ton nom sur #{tagText}",
   "youHaveBeenMentionedNoTag": "{otherUserFirstName} a mentionné ton nom",
-  "newAudience":  "Congratulations for your topic! You added {newPeopleCount} people to your audience"
-
+  "newAudience": "Congratulations for your topic! You added {newPeopleCount} people to your audience",
+  "followersCountIsGrowing": "⚡ {followersGrowth} people joined your audience !"
 }
