--- a/src/i18n/fr/notifications.json
+++ b/src/i18n/fr/notifications.json
@@ -1,19 +1,19 @@
 {
-  "reactedToYourTag": "{otherUserFirstName} a voté pour ton sujet du jour !",
+  "reactedToYourTag": "{otherUserDisplayName} a voté pour ton sujet du jour !",
   "someoneReactedToYourTag": "Quelqu'un hors de Yelly a voté pour ton sujet du jour !",
-  "reactedToYourPost": "{otherUserFirstName} a aimé ton post sur #{tagText}",
-  "reactedToYourPostNoTag": "{otherUserFirstName} a aimé ton post",
-  "repliedToYourPost": "{otherUserFirstName} a répondu à ton post sur #{tagText}",
-  "repliedToYourPostNoTag": "{otherUserFirstName} a répondu à ton post",
-  "repliedToSamePostAsYou": "{otherUserFirstName} a répondu au même post que toi sur #{tagText}",
-  "repliedToSamePostAsYouNoTag": "{otherUserFirstName} a répondu au même post que toi",
+  "reactedToYourPost": "{otherUserDisplayName} a aimé ton post sur #{tagText}",
+  "reactedToYourPostNoTag": "{otherUserDisplayName} a aimé ton post",
+  "repliedToYourPost": "{otherUserDisplayName} a répondu à ton post sur #{tagText}",
+  "repliedToYourPostNoTag": "{otherUserDisplayName} a répondu à ton post",
+  "repliedToSamePostAsYou": "{otherUserDisplayName} a répondu au même post que toi sur #{tagText}",
+  "repliedToSamePostAsYouNoTag": "{otherUserDisplayName} a répondu au même post que toi",
   "thereAreNewPostsOnYourTag": "{newPostCount} nouveaux posts sur ton sujet du jour !",
   "yourTagIsTrending": "Ton sujet intéresse, tu es à la Une !",
-  "isNowFollowingYou": "{otherUserFirstName} a rejoint ton audience",
+  "isNowFollowingYou": "{otherUserDisplayName} a rejoint ton audience",
   "promotedTag": "Tendance Yelly live",
-  "followeeCreatedTag": "{otherUserFirstName} a lancé le sujet #{tagText}",
-  "youHaveBeenMentioned": "{otherUserFirstName} a mentionné ton nom sur #{tagText}",
-  "youHaveBeenMentionedNoTag": "{otherUserFirstName} a mentionné ton nom",
+  "followeeCreatedTag": "{otherUserDisplayName} a lancé le sujet #{tagText}",
+  "youHaveBeenMentioned": "{otherUserDisplayName} a mentionné ton nom sur #{tagText}",
+  "youHaveBeenMentionedNoTag": "{otherUserDisplayName} a mentionné ton nom",
   "newAudience": "Bravo pour ton sujet ! {newPeopleCount} nouvelles personnes ont rejoint ton audience",
   "followersCountIsGrowing": "⚡ {followersGrowth} nouvelles personnes ont rejoint ton audience !"
 }
