--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -1,19 +1,19 @@
 {
-  "reactedToYourTag": "{otherUserFirstName} upvoted your topic!",
+  "reactedToYourTag": "{otherUserDisplayName} upvoted your topic!",
   "someoneReactedToYourTag": "Someone ouf of Yelly upvoted your topic!",
-  "reactedToYourPost": "{otherUserFirstName} liked your post on #{tagText}",
-  "reactedToYourPostNoTag": "{otherUserFirstName} liked your post",
-  "repliedToYourPost": "{otherUserFirstName} replied to your post on #{tagText}",
-  "repliedToYourPostNoTag": "{otherUserFirstName} replied to your post",
-  "repliedToSamePostAsYou": "{otherUserFirstName} replied to the same post as you on #{tagText}",
-  "repliedToSamePostAsYouNoTag": "{otherUserFirstName} replied to the same post as you",
+  "reactedToYourPost": "{otherUserDisplayName} liked your post on #{tagText}",
+  "reactedToYourPostNoTag": "{otherUserDisplayName} liked your post",
+  "repliedToYourPost": "{otherUserDisplayName} replied to your post on #{tagText}",
+  "repliedToYourPostNoTag": "{otherUserDisplayName} replied to your post",
+  "repliedToSamePostAsYou": "{otherUserDisplayName} replied to the same post as you on #{tagText}",
+  "repliedToSamePostAsYouNoTag": "{otherUserDisplayName} replied to the same post as you",
   "thereAreNewPostsOnYourTag": "{newPostCount} new posts on your topic!",
   "yourTagIsTrending": "Your topic is on the Front Page!",
-  "isNowFollowingYou": "{otherUserFirstName} joined your audience",
+  "isNowFollowingYou": "{otherUserDisplayName} joined your audience",
   "promotedTag": "Tendance Yelly live",
-  "followeeCreatedTag": "{otherUserFirstName} created the topic #{tagText}",
-  "youHaveBeenMentioned": "{otherUserFirstName} has mentionned your name on #{tagText}",
-  "youHaveBeenMentionedNoTag": "{otherUserFirstName} has mentionned your name",
+  "followeeCreatedTag": "{otherUserDisplayName} created the topic #{tagText}",
+  "youHaveBeenMentioned": "{otherUserDisplayName} has mentionned your name on #{tagText}",
+  "youHaveBeenMentionedNoTag": "{otherUserDisplayName} has mentionned your name",
   "newAudience": "Congratulations for your topic! You added {newPeopleCount} people to your audience",
   "followersCountIsGrowing": "⚡ {followersGrowth} people joined your audience !"
 }
